<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bindu.homework03.MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonExit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:layout_marginStart="38dp"
        android:text="@string/exit"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buttonExit"
        android:layout_marginEnd="31dp"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textViewWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewWelcome"
        android:layout_below="@+id/imageView2"
        android:text="@string/load"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewWelcome"
        app:srcCompat="@drawable/trivia" />
</RelativeLayout>
