<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bindu.homework03.TriviaActivity">

    <Button
        android:id="@+id/buttonQnumber"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Que" />

    <Button
        android:id="@+id/buttonTime"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:background="@android:color/holo_blue_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonQnumber"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonQnumber"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="18dp" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonnext"
        android:layout_alignStart="@+id/buttonQnumber"
        android:text="@string/quit"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

    <Button
        android:id="@+id/buttonnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonTime"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />

    <TextView
        android:id="@+id/textViewProg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/Load"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewQuestion"
        android:layout_marginTop="1dp">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textViewQuestion"
                android:layout_alignStart="@+id/buttonQnumber"
                android:layout_toEndOf="@+id/textViewQuestion" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
